--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -7,71 +7,38 @@ jobs:
     permissions:
       contents: write # to push pages branch (peaceiris/actions-gh-pages)
 
-    name: ${{ matrix.config.name }}
+    name: ${{ format('{0} {1} {2}', matrix.config.os, matrix.build_type, matrix.config.cc) }}
     runs-on: ${{ matrix.config.os }}
+    env:
+      JOB_NAME: ${{ format('{0} {1} {2}', matrix.config.os, matrix.build_type, matrix.config.cc) }}
     strategy:
       fail-fast: false
       matrix:
-        config:
-        - {
-            name: "Ubuntu Latest GCC Release",
-            os: ubuntu-20.04,
-            build_type: "Release", cc: "gcc", cxx: "g++",
-            build_gen: "Unix Makefiles",
-            cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES -Dbuild_xmlparser=YES -Duse_sqlite3=ON"
-          }
-        - {
-            name: "Ubuntu Latest GCC Debug",
-            os: ubuntu-20.04,
-            build_type: "Debug", cc: "gcc", cxx: "g++",
-            build_gen: "Unix Makefiles",
-            cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES -Dbuild_xmlparser=YES -Duse_sqlite3=ON"
-          }
-        - {
-            name: "Ubuntu Latest Clang Release",
-            os: ubuntu-20.04,
-            build_type: "Release", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles",
-            cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO -Duse_sqlite3=ON"
-          }
-        - {
-            name: "Ubuntu Latest Clang Debug",
-            os: ubuntu-20.04,
-            build_type: "Debug", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles",
-            cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO -Duse_sqlite3=ON"
-          }
-        - {
-            name: "macOS Latest Release",
-            os: macos-latest,
-            build_type: "Release", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles"
-          }
-        - {
-            name: "macOS Latest Debug",
-            os: macos-latest,
-            build_type: "Debug", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles"
-          }
-        - {
-            name: "Windows Latest MSVC Debug", 
-            os: windows-latest,
-            build_type: "Debug", cc: "cl", cxx: "cl",
-            build_gen: "NMake Makefiles"
-          }
-        - {
-            name: "Windows Latest MSVC Release", 
-            os: windows-latest,
-            build_type: "Release", cc: "cl", cxx: "cl",
-            build_gen: "NMake Makefiles"
-          }
+       build_type: ["Debug", "Release"]
+       config:
+          - { os: ubuntu-20.04, cc: "gcc", cxx: "g++", build_gen: "Unix Makefiles",
+              cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES -Dbuild_xmlparser=YES -Duse_sqlite3=ON",
+              tools: { bison: 'bison', flex: 'flex', gs: 'gs' },
+            }
+          - { os: ubuntu-20.04, cc: "clang", cxx: "clang++", build_gen: "Unix Makefiles",
+              cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO -Duse_sqlite3=ON",
+              tools: { bison: 'bison', flex: 'flex', gs: 'gs' },
+            }
+          - { os: macos-latest, cc: "clang", cxx: "clang++", build_gen: "Unix Makefiles",
+              tools: { bison: 'bison', flex: 'flex', gs: 'gs' },
+            }
+          - { os: windows-latest, cc: "cl", cxx: "cl", build_gen: "NMake Makefiles",
+              tools: { bison: 'win_bison', flex: 'win_flex', gs: 'gswin64c' },
+              extra_ctest_flags: '--pdf',
+            }
     steps:
     - name: Checkout doxygen
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-      
+
 #    - name: Download MikTex (Windows)
+#      if: runner.os == 'windows'
 #      run: |
 #        $wc = New-Object System.Net.WebClient;
 #        $maxAttempts=5;
@@ -83,59 +50,59 @@ jobs:
 #          } Catch [Exception] {
 #            Write-Host $_.Exception | format-list -force
 #          }
-#        } while (((Test-Path "miktexsetup-5.2.0+b8f430f-x64.zip") -eq $false) -and ($attemptCount -le $maxAttempts))  
+#        } while (((Test-Path "miktexsetup-5.2.0+b8f430f-x64.zip") -eq $false) -and ($attemptCount -le $maxAttempts))
 #      shell: pwsh
-#      if: matrix.config.os == 'windows-latest'
-      
+
     - name: Install libiconv (Windows)
+      if: runner.os == 'windows'
       uses: suisei-cn/actions-download-file@v1
-      with: 
+      with:
         url: "https://github.com/pffang/libiconv-for-Windows/releases/download/v1.16/libiconv-for-Windows_1.16.7z"
-        target: .  
-      if: matrix.config.os == 'windows-latest'
+        target: .
 
     - name: Install LaTeX (Linux)
+      if: runner.os == 'linux'
       run: |
         sudo apt update
         sudo apt-get install texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils
-      if: startsWith(matrix.config.os,'ubuntu-')
 
     - name: Install GhostScript & Poppler (macOS)
+      if: runner.os == 'macos'
       run: |
         brew update
         brew install --overwrite ghostscript poppler
-      if: startsWith(matrix.config.os,'macos-')
 
     - name: Install LaTeX (MacOS)
+      if: runner.os == 'macos'
       run: |
         brew update
-        brew install --overwrite --cask basictex
+        brew install --cask basictex
         echo "/Library/TeX/texbin/" >> $GITHUB_PATH
-      if: startsWith(matrix.config.os,'macos-')
 
     - name: Install LaTeX Packages (macOS)
+      if: runner.os == 'macos'
       run: |
         brew update
         brew install --cask gpg-suite-no-mail  # For tlmgr signatures
-        sudo tlmgr --update
+        sudo tlmgr update --self
         sudo tlmgr install \
              adjustbox alphalph appendix collectbox dvisvgm enumitem \
              epstopdf etoc hanging ifoddpage import listofitems \
              multirow newunicodechar plantuml pdftex regexpatch sectsty \
-             stackengine svg tocloft varwidth wasysym 
-      if: matrix.config.os == 'macos-latest'
-    
+             stackengine svg tocloft varwidth wasysym
+
     - name: Install libclang (Ubuntu 20.04)
+      if: runner.os == 'linux' && matrix.config.cc == 'clang'
       run: |
         sudo apt update
         sudo apt remove llvm-8 clang-8 libclang-common-8-dev clang-format-8 libllvm8
         sudo apt remove llvm-9 llvm-9-dev llvm-9-tools llvm-9-runtime clang-9 libclang-common-9-dev clang-format-9 libllvm9
-        #sudo apt remove llvm-10 llvm-10-dev llvm-10-tools llvm-10-runtime clang-10 clang-format-10 libclang-common-10-dev libclang-cpp10 libclang1-10 libllvm10  
-        sudo apt remove llvm-11 llvm-11-dev llvm-11-tools llvm-11-runtime clang-11 clang-format-11 libclang-common-11-dev libclang-cpp11 libclang1-11 libllvm11  
-        sudo apt remove llvm-12 llvm-12-dev llvm-12-tools llvm-12-runtime clang-12 clang-format-12 libclang-common-12-dev libclang-cpp12 libclang1-12 libllvm12  
+        #sudo apt remove llvm-10 llvm-10-dev llvm-10-tools llvm-10-runtime clang-10 clang-format-10 libclang-common-10-dev libclang-cpp10 libclang1-10 libllvm10
+        sudo apt remove llvm-11 llvm-11-dev llvm-11-tools llvm-11-runtime clang-11 clang-format-11 libclang-common-11-dev libclang-cpp11 libclang1-11 libllvm11
+        sudo apt remove llvm-12 llvm-12-dev llvm-12-tools llvm-12-runtime clang-12 clang-format-12 libclang-common-12-dev libclang-cpp12 libclang1-12 libllvm12
         sudo apt-get autoremove
         sudo apt-get clean
-        sudo apt install libclang-common-10-dev libclang-10-dev  
+        sudo apt install libclang-common-10-dev libclang-10-dev
         apt list --installed | egrep '(clang|llvm)'
         ls -d /usr/lib/llvm-*/include/
         sudo update-alternatives --install /usr/bin/clang   clang   /usr/bin/clang-10   100
@@ -144,21 +111,21 @@ jobs:
         ls -al /etc/alternatives/clang++
         which clang++
         clang++ -v
-      if: matrix.config.os == 'ubuntu-20.04'
-    
-    - name: Install libxapian (Ubuntu 20.04)
+
+    - name: Install libxapian (Ubuntu)
+      if: runner.os == 'linux'
       run: |
         sudo apt update
         sudo apt install libxapian-dev
-      if: matrix.config.os == 'ubuntu-20.04'
-          
+
 #    - name: Extract MikTex zip (Windows)
+#      if: runner.os == 'windows'
 #      shell: bash
 #      run: |
 #        unzip miktexsetup-5.2.0+b8f430f-x64.zip
-#      if: matrix.config.os == 'windows-latest'
 #
 #    - name: Download MikTex packages (Windows)
+#      if: runner.os == 'windows'
 #      shell: bash
 #      run: |
 #        ./miktexsetup_standalone --verbose \
@@ -166,9 +133,9 @@ jobs:
 #                      --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" \
 #                      --package-set=essential \
 #                      download
-#      if: matrix.config.os == 'windows-latest'
 #
 #    - name: Install MikTex packages (Windows)
+#      if: runner.os == 'windows'
 #      shell: bash
 #      run: |
 #        ./miktexsetup_standalone --local-package-repository="C:/miktex-repository" \
@@ -176,19 +143,19 @@ jobs:
 #                      --package-set=essential \
 #                      --shared \
 #                      install
-#      if: matrix.config.os == 'windows-latest'
 #
 #    - name: Setting MikTex paths (Windows)
+#      if: runner.os == 'windows'
 #      shell: bash
 #      run: |
 #        echo "C:/Program Files/MiKTeX/miktex/bin/x64/" >> $GITHUB_PATH
 #        export PATH="/c/Program Files/MiKTeX/miktex/bin/x64/:$PATH"
-#        
+#
 #        echo "Configuring MiKTeX to install missing packages on the fly"
 #        initexmf --admin --verbose --set-config-value='[MPM]AutoInstall=1'
-#      if: matrix.config.os == 'windows-latest'
 
     - name: Install LaTeX (Windows)
+      if: runner.os == 'windows'
       uses: teatimeguest/setup-texlive-action@v2
       with:
         packages: >-
@@ -197,114 +164,87 @@ jobs:
           babel-dutch
           cjk
           bibtex
-      if: matrix.config.os == 'windows-latest'
 
     - name: Install Ghostscript (Linux)
+      if: runner.os == 'linux'
       run: |
         sudo apt update
         sudo apt-get install ghostscript
-      if: startsWith(matrix.config.os,'ubuntu-')
-    
+
     - name: Install Ghostscript (Windows)
+      if: runner.os == 'windows'
       run:
         choco install ghostscript
-      if: matrix.config.os == 'windows-latest'
 
     - name: Setting Ghostscript paths (Windows)
+      if: runner.os == 'windows'
       shell: bash
       run: |
-        export GSpath=`find /c/Prog*/gs -name gswin\*c.exe | sed -e "s/gswin.*c.exe//"`
-        export PATH="$GSpath:$PATH"
-        export GSpath=`echo "$GSpath" | sed -e "s%/c%C:%"`
-        echo "$GSpath" >> $GITHUB_PATH
-      if: matrix.config.os == 'windows-latest'
-      
+        _gsloc="$(dirname "$(find /c/Prog*/gs -iname gswin\*c.exe)")"
+        echo "$(cygpath -w "${_gsloc}")" >> $GITHUB_PATH
+
     - name: Install xmllint (Linux)
+      if: runner.os == 'linux'
       run: |
          sudo apt-get update
          sudo apt-get install libxml2-utils
-      if: startsWith(matrix.config.os,'ubuntu-')
 
     - name: Install xmllint (MacOS)
       run: |
          brew update
          brew install --overwrite libxml2
-      if: matrix.config.os == 'macos-latest'
+      if: runner.os == 'macos'
 
     - name: Install bison (MacOS)
+      if: runner.os == 'macos'
       run: |
         brew update
         brew install --overwrite bison
-        echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-      if: matrix.config.os == 'macos-latest'
-    
+        echo "$(brew --prefix bison)/bin" >> $GITHUB_PATH
+
     - name: Install bison/flex (Windows)
+      if: runner.os == 'windows'
       run: |
-        Choco-Install -PackageName winflexbison 
+        Choco-Install -PackageName winflexbison
         #choco install winflexbison
-      if: matrix.config.os == 'windows-latest'
 
     - name: Install Graphviz (Linux)
+      if: runner.os == 'linux'
       run: |
         sudo apt update
         sudo apt-get install graphviz
-      if: startsWith(matrix.config.os,'ubuntu-')
 
     - name: Install Graphviz (MacOS)
+      if: runner.os == 'macos'
       run: |
         brew install --overwrite graphviz
-      if: matrix.config.os == 'macos-latest'
 
     - name: Install Graphviz (Windows)
-      run:
+      if: runner.os == 'windows'
+      run: |
         choco install graphviz.portable
-      if: matrix.config.os == 'windows-latest'
 
 #    - name: Install Perl (Windows)
+#      if: runner.os == 'windows'
 #      run:
 #        choco install activeperl
-#      if: matrix.config.os == 'windows-latest'
 
     - name: Setup VS Environment (Windows)
+      if: runner.os == 'windows'
       uses: seanmiddleditch/gha-setup-vsdevenv@master
-      if: matrix.config.os == 'windows-latest'
 
     - name: Refresh Env (Windows)
+      if: runner.os == 'windows'
       run:
         refreshenv
-      if: matrix.config.os == 'windows-latest'
-    
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
-    
-    - name: Check tool versions (Linux / MacOS)
-      shell: bash
-      run: |
-        echo "=== perl ===";
-        perl --version;
-        echo "=== python ===";
-        python --version;
-        echo "=== cmake ===";
-        cmake --version;
-        echo "=== latex ===";
-        latex --version;
-        echo "=== bibtex ===";
-        bibtex --version
-        echo "=== dvips ===";
-        dvips --version
-        echo "=== bison ===";
-        ${{ matrix.config.os == 'windows-latest' && "win_" || "" }}bison --version;
-        echo "=== flex ===";
-        ${{ matrix.config.os == 'windows-latest' && "win_" || "" }}flex --version;
-        echo "=== dot ===";
-        dot -V;
-        echo "=== ghostscript ===";
-        gs${{ matrix.config.os == 'windows-latest' && "win64c" || "" }} --version;
-        #if: matrix.config.os != 'windows-latest'
 
-    - name: Check tool versions (Windows)
+    - name: Check tool versions
       shell: bash
       run: |
+        echo "Build tools for $JOB_NAME:";
         echo "=== perl ===";
         perl --version;
         echo "=== python ===";
@@ -318,14 +258,13 @@ jobs:
         echo "=== dvips ===";
         dvips --version
         echo "=== bison ===";
-        win_bison --version;
+        ${{ matrix.config.tools.bison }} --version;
         echo "=== flex ===";
-        win_flex --version;
+        ${{ matrix.config.tools.flex }} --version;
         echo "=== dot ===";
         dot -V;
         echo "=== ghostscript ===";
-        gswin64c --version;
-      if: false #matrix.config.os == 'windows-latest'
+        ${{ matrix.config.tools.gs }} --version;
 
     - name: Configure
       shell: cmake -P {0}
@@ -337,11 +276,11 @@ jobs:
           COMMAND cmake
             -S .
             -B build
-            -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
+            -D CMAKE_BUILD_TYPE=${{ matrix.build_type }}
             -G "${{ matrix.config.build_gen }}"
             -Dbuild_doc=YES
             -Dbuild_wizard=YES
-            ${{ matrix.config.cmake_extra_opts }}            
+            ${{ matrix.config.cmake_extra_opts }}
           RESULT_VARIABLE result
         )
         if (NOT result EQUAL 0)
@@ -354,7 +293,7 @@ jobs:
         include(ProcessorCount)
         ProcessorCount(N)
         execute_process(
-          COMMAND cmake --build build --parallel ${N} 
+          COMMAND cmake --build build --parallel ${N}
           RESULT_VARIABLE result
           OUTPUT_VARIABLE output
           ERROR_VARIABLE output
@@ -370,38 +309,26 @@ jobs:
     - name: Archive build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: "${{ matrix.config.name }} build artifacts"
+        name: '${{ env.JOB_NAME }} build artifacts'
         path: build/bin/
 
-    - name: Run tests (Linux / MacOS)
+    - name: Run tests
       shell: cmake -P {0}
-      run: |
+      run: >+
         set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
 
         execute_process(
-          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf"
-          RESULT_VARIABLE result
-        )
+          COMMAND
+            cmake --build build --target tests
+            TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf ${{ matrix.config.extra_ctest_flags }}"
+          RESULT_VARIABLE result)
+
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Running tests failed!")
         endif()
-      if: matrix.config.os != 'windows-latest'
-
-    - name: Run tests (Windows)
-      shell: cmake -P {0}
-      run: |
-        set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
-
-        execute_process(
-          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf --pdf"
-          RESULT_VARIABLE result
-        )
-        if (NOT result EQUAL 0)
-          message(FATAL_ERROR "Running tests failed!")
-        endif()
-      if: matrix.config.os == 'windows-latest'
 
     - name: Generate documentation
+      if: runner.os == 'linux' && matrix.build_type == 'release' && matrix.config.cc == 'gcc'
       shell: cmake -P {0}
       run: |
         execute_process(
@@ -413,21 +340,22 @@ jobs:
         endif()
 
     - name: Archive html documentation artifacts
+      if: runner.os == 'linux' && matrix.build_type == 'release' && matrix.config.cc == 'gcc'
       uses: actions/upload-artifact@v3
       with:
         name: "Html documentation artifacts"
         path: build/html/
-      if: matrix.config.name == 'Ubuntu Latest GCC Release'
 
 
     - name: Archive Latex documentation artifacts
+      if: runner.os == 'linux' && matrix.build_type == 'release' && matrix.config.cc == 'gcc'
       uses: actions/upload-artifact@v3
       with:
         name: "Latex documentation artifacts"
         path: build/latex/doxygen_manual.pdf
-      if: matrix.config.name == 'Ubuntu Latest GCC Release'
-      
+
     - name: Generate Internal documentation
+      if: runner.os == 'linux' && matrix.build_type == 'release' && matrix.config.cc == 'gcc'
       shell: cmake -P {0}
       run: |
         execute_process(
@@ -437,12 +365,10 @@ jobs:
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Building internal documentation failed")
         endif()
-      if: matrix.config.name == 'Ubuntu Latest GCC Release'
 
     - name: Publish Internal documentation to Github pages
+      if: github.event_name == 'push' && runner.os == 'linux' && matrix.build_type == 'release' && matrix.config.cc == 'gcc'
       uses: peaceiris/actions-gh-pages@v3
       with:
          github_token: ${{ secrets.GITHUB_TOKEN }}
          publish_dir: build/doxygen_docs/html
-      if: ${{ github.event_name == 'push' && matrix.config.name == 'Ubuntu Latest GCC Release' }}
-
