--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -100,13 +100,31 @@ jobs:
         sudo apt-get install texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils
       if: startsWith(matrix.config.os,'ubuntu-')
 
-    - name: Install LaTeX (MacOS)
+    - name: Install Poppler (macOS)
+      if: runner.os == 'macos'
       run: |
         brew update
-        brew install --cask mactex;
+        brew install --overwrite poppler
+
+    - name: Install LaTeX (MacOS)
+      if: runner.os == 'macos'
+      run: |
+        brew update
+        brew install --cask basictex
+        brew install --cask gpg-suite-no-mail  # tlmgr signature-checking
         echo "/Library/TeX/texbin/" >> $GITHUB_PATH
-      if: matrix.config.os == 'macos-latest'
-    
+
+    - name: Install LaTeX Packages (macOS)
+      if: runner.os == 'macos'
+      run: |
+        sudo tlmgr update --self
+        sudo tlmgr install \
+            scheme-medium \
+            collection-latexextra \
+            babel-dutch \
+            cjk \
+            bibtex
+
     - name: Install libclang (Ubuntu 20.04)
       run: |
         sudo apt update
